# langgraph-chat-ui

./: .dockerignore  .env.example  .gitignore  .npmrc  CLAUDE.md  Dockerfile  LICENSE  README.ko.md  README.md  README_EN.md  docker-compose.full.yml  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/skills/: integrate.md
.github/workflows/: ci.yml
docs/: 00-OVERVIEW.md  00-OVERVIEW_EN.md  01-NEXTAUTH-OAUTH.md  02-NEXTAUTH-CREDENTIALS.md  03-NEXTAUTH-EMAIL.md  04-OAUTH-DIRECT.md  04-OAUTH-DIRECT_EN.md  05-STANDALONE.md  06-FRONTEND-COMPATIBILITY.md  06-FRONTEND-COMPATIBILITY_EN.md  CODE-SIMPLIFICATION.md  LANGGRAPH_AUTH_GUIDE.md  LANGGRAPH_AUTH_GUIDE_EN.md  LANGGRAPH_DEPLOYMENT_GUIDE.md  LANGGRAPH_DEPLOYMENT_GUIDE_EN.md  QUICK_START.md  REFACTORING-SUMMARY.md
docs/features/: 01-connection-management.md  02-streaming-realtime.md  03-message-handling.md  04-thread-management.md  05-schema-ui.md  06-task-visualization.md  07-settings-config.md  08-agent-inbox.md
examples/: README.ko.md  README.md
examples/basic-auth/: README.md
examples/github-oauth/: README.md
examples/github-oauth/server/: .env.example  auth.py  graph.py  pyproject.toml
examples/oauth-direct/server/: .env.example  auth.py  graph.py  pyproject.toml
frontend/: .env.example  .prettierignore  Makefile  next.config.mjs  package.json  pnpm-lock.yaml  vercel.json
prisma/: dev.db  schema.prisma
scripts/: create-admin.ts  promote-admin.js  promote-admin.ts  seed-settings.ts  setup.ts
src/: middleware.ts
src/app/: page.tsx  (+3 more)
(+390 files in other folders)
