[project]
name = "langgraph-github-oauth"
version = "0.1.0"
description = "LangGraph server with NextAuth.js GitHub OAuth authentication"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.12",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.6",
    "langgraph-sdk>=0.1.46",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.1.64",
]
