[project]
name = "langgraph-oauth-direct"
version = "0.1.0"
description = "LangGraph server with direct Google OAuth authentication"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.12",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.6",
    "langgraph-sdk>=0.1.46",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.1.64",
]
